# DiscordPyLoggerCog

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker-compose/: bot.yaml
src/: basic_project_logger.py  logging.yaml  main.py  settings.py
src/cogs/bot_control/: __init__.py  sync.py
src/cogs/dictionary/: dal_dictionary.py  main.py
src/cogs/logger/: __init__.py  embed_formatter.py  filters.py  handlers.py  main.py
src/cogs/tests_for_logger/: __init__.py  one.py  three.py  two.py
